--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -35,7 +35,10 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email" />
+            android:hint="@string/email"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
+            android:inputType="text"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -56,7 +59,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="@string/password" />
+            android:hint="@string/password"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
+            />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -78,7 +84,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="@string/confirmP" />
+            android:hint="@string/confirmP"
+            android:imeOptions="actionDone"
+            />
     </android.support.design.widget.TextInputLayout>
 
     <Button
